Implement get available genomes of species
